<resources>
    <string name="app_name">VisuoLink</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_profiles">Profile</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="eye_gesture_img">eye_gesture_img</string>
    <string name="gesture_control_img">Geturecontrolimg</string>
    <string name="img3">img3</string>
    <string name="img4">img4</string>
    <string name="about">About</string>
    <string name="updates">Updates</string>
    <string name="models">Models</string>
    <string name="eye">Eye Controller</string>
    <string name="volume">Gesture Controller</string>
    <string name="screen_recording">Screen Recording Gesture</string>
    <string name="app_gesture">App Lanucher</string>
    <string name="text_font">Text Font</string>
    <string name="ui_preferences">UI Preferences</string>
    <string name="saveOrNot">Do you want to save the changes?</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="account_settings">Account Settings</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="user_profile_pic">User Profile Pic</string>
    <string name="user_email">user@email.com</string>
    <string name="phone_number">91 111 111 1111</string>
    <string name="email">Email</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="support">support</string>
    <string name="logout">logout</string>
    <string name="app_version">V 1.8</string>
    <string name="edit">Edit</string>
    <string name="username_label">Username</string>
    <string name="name_label">Name</string>
    <string name="new_password_label">New Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="otp_label">OTP :</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend</string>
    <string name="submit">Submit</string>
    <string name="app_launcher_short_info">Let\'s you quickly open any app using custom gestures. Assign each app a unique gesture for faster access.</string>
    <string name="how_it_works">How It Works</string>
    <string name="working">• Tap \'Map New Gesture\' to assign a gesture to an app.\n• Draw a saved gesture on the detection screen to open the mapped app.\n• View or delete existing gestures with \'Mapped Gestures\'.\n• Delete gestures by tapping them in the list.</string>
    <string name="view_saved_gestures">Mapped Gestures</string>
    <string name="map_new_gesture">Map New Gesture</string>
    <string name="note">Note</string>
    <string name="note_text">Double-tap the Volume Up button to open the Gesture Detection screen.</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="old_password_label">Old Password</string>
    <string name="eye_gesture_not_enabled">Eye Controller feature is not enabled. Please enable it and try again!</string>
    <string name="changesApplied">Changes applied</string>
    <string name="accountWarning">Please login to manage profile</string>
    <string name="unauthorizedAccess">Unauthorized access</string>
    <string name="changesResets">Changes reset</string>
    <string name="defaultFont">Roboto</string>
    <string name="visuolink_privacy_data_policy"><![CDATA[Privacy & Data Rules]]></string>
    <string name="policy_informationWeCollect"><b>Automatically:</b> VisuoLink may access information from the internet for purposes such as logging in, loading profile pages, and app updates.</string>
    <string name="policy_informationWeCollect2"><b>From Your Device:</b> The app only accesses personal information on your device when you actively edit your profile or change your password. Only the information necessary to perform these actions is collected.</string>
    <string name="policy">Policy</string>
</resources>