<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true"
        tools:context=".ui.settings.ManageProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="25dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="28dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="?attr/background"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/old_password_label"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="6dp"
                        android:drawablePadding="5dp"
                        app:drawableLeftCompat="@drawable/pen"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/old_password"
                        android:layout_marginStart="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:hint="@string/enter_old_password"
                        android:enabled="false"
                        android:textColor="@color/profileFullNameTextColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_password_label"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="6dp"
                        android:drawablePadding="5dp"
                        app:drawableLeftCompat="@drawable/edit"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_password"
                        android:layout_marginStart="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:hint="@string/new_password"
                        android:enabled="false"
                        android:textColor="@color/profileFullNameTextColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password_label"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="6dp"
                        android:drawablePadding="5dp"
                        app:drawableLeftCompat="@drawable/edit"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password"
                        android:layout_marginStart="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:hint="@string/re_enter_new_password"
                        android:enabled="false"
                        android:textColor="@color/profileFullNameTextColor"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/app_version"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="11sp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
