<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:scrollbars="none"
        android:fillViewport="true"
        tools:context=".ui.settings.ManageProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:contentDescription="@string/user_profile_pic"
                    android:src="@drawable/ic_launcher_round"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/edit_profile_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:enabled="false"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/profileFullNameTextColor"
                    app:drawableRightCompat="@drawable/edit"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="28dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="?attr/background"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username_label"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="6dp"
                        android:drawablePadding="5dp"
                        app:drawableLeftCompat="@drawable/contact"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_username"
                        android:layout_marginStart="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:enabled="false"
                        android:hint="@string/username"
                        android:textColor="@color/profileFullNameTextColor"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_label"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="6dp"
                        android:drawablePadding="5dp"
                        app:drawableLeftCompat="@drawable/phone"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_name"
                        android:layout_marginStart="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:enabled="false"
                        android:hint="@string/full_name"
                        android:textColor="@color/profileFullNameTextColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="6dp"
                        android:drawablePadding="5dp"
                        app:drawableLeftCompat="@drawable/email"/>

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_email"
                            android:layout_marginStart="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:enabled="false"
                            android:hint="@string/user_email"
                            android:textColor="@color/profileFullNameTextColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number_label"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="6dp"
                        android:drawablePadding="5dp"
                        app:drawableLeftCompat="@drawable/phone_icon"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_phone_number"
                        android:layout_marginStart="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textSize="16sp"
                        android:enabled="false"
                        android:hint="@string/phone_number"
                        android:textColor="@color/profileFullNameTextColor"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/supportBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"/>

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="11sp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
