<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="none"
    android:fillViewport="true"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="14dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?attr/background"
                android:padding="12dp">

                <TextView
                    android:text="@string/models"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:drawablePadding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableLeftCompat="@drawable/model" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="34dp">

                    <TextView
                        android:text="@string/eye"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/eye_gesture_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gesture_control_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="34dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:text="@string/volume"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14sp"/>
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/gesture_control_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:text="@string/app_gesture"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14sp"/>
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/app_launcher_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="5dp">

                        <Button
                            android:id="@+id/save"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/apply_changes"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="14dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?attr/background"
                android:padding="12dp">

                <TextView
                    android:text="@string/ui_preferences"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:drawablePadding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableLeftCompat="@drawable/ui"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingVertical="12dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_font"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/changeFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:spinnerMode="dropdown"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        android:text="@string/dark_mode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchDarkMode"
                        android:layout_width="wrap_content"
                        android:enabled="false"
                        android:layout_height="0dp"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="14dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?attr/background"
                android:padding="12dp">

                <TextView
                    android:text="@string/notifications"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:drawablePadding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableLeftCompat="@drawable/notifications" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="34dp"
                    android:gravity="center_vertical">
                    <TextView
                        android:text="@string/enable_notifications"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchNotifications"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="14dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?attr/background"
                android:padding="12dp">

                <TextView
                    android:text="@string/account_settings"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:drawablePadding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableLeftCompat="@drawable/account_settings" />

                <TextView
                    android:id="@+id/manage_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_weight="1"
                    android:text="@string/manage_profile"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/password_change"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="34dp"
                    android:text="@string/change_password"
                    android:layout_marginTop="8dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>



